<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity"
    >

    <EditText
        android:id="@+id/etShowData"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="end"
        android:paddingTop="50dp"
        android:background="@color/editTextGray"
        android:textSize="40sp"
        android:layout_weight="1"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button4"
                style="@style/buttonStyle"
                android:text="@string/ac" />

            <Button
                android:id="@+id/btnPlusMinus"
                style="@style/buttonStyle"
                android:text="@string/plusMinus" />

            <Button
                android:id="@+id/button2"
                style="@style/buttonStyle"
                android:text="@string/modulus" />

            <Button
                android:id="@+id/btnDivide"
                style="@style/operationButton"
                android:text="@string/division" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn7"
                style="@style/buttonStyle"
                android:text="@string/seven" />

            <Button
                android:id="@+id/btn8"
                style="@style/buttonStyle"
                android:text="@string/eight" />

            <Button
                android:id="@+id/btn9"
                style="@style/buttonStyle"
                android:text="@string/nine" />

            <Button
                android:id="@+id/btnMulti"
                style="@style/operationButton"
                android:text="@string/multiplication" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn4"
                style="@style/buttonStyle"
                android:text="@string/four" />

            <Button
                android:id="@+id/btn5"
                style="@style/buttonStyle"
                android:text="@string/five" />

            <Button
                android:id="@+id/btn6"
                style="@style/buttonStyle"
                android:text="@string/six" />

            <Button
                android:id="@+id/btnSub"
                style="@style/operationButton"
                android:text="@string/minus" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn1"
                style="@style/buttonStyle"
                android:text="@string/one" />

            <Button
                android:id="@+id/btn2"
                style="@style/buttonStyle"
                android:text="@string/two" />

            <Button
                android:id="@+id/btn3"
                style="@style/buttonStyle"
                android:text="@string/three" />

            <Button
                android:id="@+id/btnAdd"
                style="@style/operationButton"
                android:text="@string/addition" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn0"
            android:layout_width="180dp"
            android:layout_height="90dp"
            android:background="@color/buttonWhite"
            android:textSize="25sp"
            android:text="@string/zero"
            android:layout_weight="2"
            android:onClick="btnSelectedEvent"/>

        <Button
            android:id="@+id/btnDot"
            style="@style/buttonStyle"
            android:text="@string/point" />

        <Button
            android:id="@+id/btnEqual"
            style="@style/equalButton"
            android:text="@string/equal"
            android:onClick="btnEqualEvent"/>
    </LinearLayout>
</LinearLayout>